--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
         <h1>Day One HW</h1>
         <h3>Minimum Requirements:</h3>
         <ul>
-          <li>Create a new file and name it [your-name].html</li>
-          <li>Copy this file and replace my info with yours (you may delete these instructions)</li>
+          <li>Replace my info with yours (you may delete these instructions)</li>
           <li>Save and push to your branch</li>
           <li>Open pull request</li>
           <li>You may merge and delete your branch when you get the thumbs up</li>
-          <li>Tip: We will worry about styling another day, otherwise there will be too many merge conflicts</li>
+          <li>BONUS: You may style however you'd like</li>
         </ul>
       </div>
     </div>
