resetting for my story/adding some styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="container">
-    <div class="row">
+    <div class="row text-center">
       <div class="col-md-12">
         <h1>Day One HW</h1>
         <h3>Minimum Requirements:</h3>
@@ -25,10 +25,10 @@
     </div>
     <div class="row">
       <div class="col-md-3">
-        <h1>Rocky</h1>
+        <h1>Ryeker</h1>
       </div>
       <div class="col-md-9">
-        <h3>I started taking classes at Bitwise because I was tired of working retail jobs and feeling like I was stuck. A friend of mine told me about the Geekwise classes and I thought I'd give it a shot. Three months later, I was offered an internship at Edit LLC and shortly after, I was accepted into the cohort and never looked back.</h3>
+        <h3>I started coming to Geekwise after my daughter was born and I realized that retail/food service was not where I wanted my future to go. That was in April of 2015, and now I am a full-time developer. It can happen for you too!</h3>
       </div>
     </div>
   </div>
