--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>Ryeker</h1>
       </div>
       <div class="col-md-9">
-        <h3>I started coming to Geekwise after my daughter was born and I realized that retail/food service was not where I wanted my future to go. That was in April of 2015, and now I am a full-time developer. It can happen for you too!</h3>
+        <h3>la la ala</h3>
       </div>
     </div>
   </div>
