--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div class="col-md-12">
         <h1>Day One HW</h1>
         <h3>Minimum Requirements:</h3>
+        <h1>Added some stuff</h1>
         <ul>
           <li>Replace my info with yours (you may delete these instructions)</li>
           <li>Save and push to your branch</li>
