--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
+<!-- adding things -->
   <div class="container">
     <div class="row text-center">
       <div class="col-md-12">
