pushing so I can host

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li>Save and push to your branch</li>
           <li>Open pull request</li>
           <li>You may merge and delete your branch when you get the thumbs up</li>
-          <li>BONUS: You may style however you'd like</li>
+          <li>Changin for practice</li>
         </ul>
       </div>
     </div>
