--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     </div>
     <div class="row">
       <div class="col-md-3">
-        <h1>Ryeker</h1>
+        <h1>Not Ryeker</h1>
       </div>
       <div class="col-md-9">
-        <h3>la la ala</h3>
+        <h3>la la ala Tra lalala</h3>
       </div>
     </div>
   </div>
