reworking entire body section

--- a/index.html
+++ b/index.html
@@ -8,35 +8,8 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<!-- adding things -->
-<!-- comment 1 -->
-  <div class="container">
-    <div class="row text-center">
-      <div class="col-md-12">
-        <h1>Day One HW</h1>
-        <h3>Minimum Requirements:</h3>
-        <h1>Added some stuff</h1>
-        <ul>
-          <li>Replace my info with yours (you may delete these instructions)</li>
-          <li>Save and push to your branch</li>
-          <li>Open pull request</li>
-          <li>You may merge and delete your branch when you get the thumbs up</li>
-          <li>BONUS: You may style however you'd like</li>
-        </ul>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-3">
-        <h1>Not Ryeker</h1>
-      </div>
-      <div class="col-md-9">
-        <h3>la la ala Tra lalala</h3>
-      </div>
-    </div>
+  <div class="magic">
+    <p>whoa!</p>
   </div>
-
-  <!-- start of javascript -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
