added my story to the repo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="magic">
-    <p>whoa!</p>
+    <p>My story with Bitwise is long and arduous, but basically, I love tech and I love people. pretty sweet!!</p>
   </div>
 </body>
 </html>
