added h1 for title effect

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div class="magic">
+    <h1>Hello World, this is my story</h1>
     <p>My story with Bitwise is long and arduous, but basically, I love tech and I love people. pretty sweet!!</p>
   </div>
 </body>
