--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<<<<<<< HEAD
   <div class="magic">
-    <h1>Hello World, this is my story</h1>
-    <p>I" taking classes at bitwise so I can get out of the automotive industry. It would be great opportunity to make a ton more money and have more fun going to work. It sucks waking up every morning not wanting to go to work.
-    My name is Cody, and a few people call me Code Dog, just as a nickname. But when I learn coding, the nickname would make alot more sense.</p>
-=======
-
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -31,13 +25,13 @@
     </div>
     <div class="row">
       <div class="col-md-3">
-        <h1>Rocky</h1>
+        <h1>Cody</h1>
       </div>
       <div class="col-md-9">
-        <h3>I wanna be famous.</h3>
+        <h3>I" taking classes at bitwise so I can get out of the automotive industry. It would be great opportunity to make a ton more money and have more fun going to work. It sucks waking up every morning not wanting to go to work.
+        My name is Cody, and a few people call me Code Dog, just as a nickname. But when I learn coding, the nickname would make alot more sense.</h3>
       </div>
     </div>
->>>>>>> 39e57c08726842fc1467cc24615d9cebee9ed514
   </div>
 </body>
 </html>
