--- a/index.html
+++ b/index.html
@@ -7,31 +7,20 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-  <div class="magic">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h1>Day One HW</h1>
-        <h3>Minimum Requirements:</h3>
-        <ul>
-          <li>My nickname is Code Dog</li>
-          <li>Could be a neat company name</li>
-          <li>I guess it's my destiny</li>
-          <li>You may merge and delete your branch when you get the thumbs up</li>
-          <li>BONUS: You may style however you'd like</li>
-        </ul>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-3">
-        <h1>Cody</h1>
-      </div>
-      <div class="col-md-9">
-        <h3>I" taking classes at bitwise so I can get out of the automotive industry. It would be great opportunity to make a ton more money and have more fun going to work. It sucks waking up every morning not wanting to go to work.
-        My name is Cody, and a few people call me Code Dog, just as a nickname. But when I learn coding, the nickname would make alot more sense.</h3>
-      </div>
-    </div>
+<body class="background container">
+  <div class="container-fluid">
+    <div class="header col-md-12"></div>
+    <div class="nav col-md-12"></div>
+    <div class="content col-md-9"></div>
+    <div class="aside col-md-3"></div>
+    <div class="promo1 col-md-3"></div>
+    <div class="promo2 col-md-3"></div>
+    <div class="promo3 col-md-3"></div>
+    <div class="promo4 col-md-3"></div>
+    <div class="footer col-md-12"></div>
+
+    </aside>
+
   </div>
 </body>
 </html>
