created media queries

--- a/index.html
+++ b/index.html
@@ -7,30 +7,36 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="background container">
+<body>
   <div class="container-fluid">
     <div class="header col-md-12"></div>
     <div class="nav col-md-12"></div>
-    <div class="content col-md-9"></div>
+    <div class="content col-md-9">
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-1"></div>
+        <div class="col-md-1"></div>
+        <div class="col-md-1"></div>
+        <div class="col-md-1"></div>
+        <div class="col-md-1"></div>
+        <div class="col-md-1"></div>
+        <div class="col-md-1"></div>
+        <div class="col-md-1"></div>
+        <div class="col-md-1"></div>
+        <div class="col-md-1"></div>
+        <div class="col-md-1"></div>
+      </div>
+    </div>
     <div class="aside col-md-3"></div>
     <div class="promo1 col-md-3"></div>
     <div class="promo2 col-md-3"></div>
     <div class="promo3 col-md-3"></div>
     <div class="promo4 col-md-3"></div>
     <div class="footer col-md-12"></div>
-<<<<<<< Updated upstream
-=======
-
-    </aside>
-
-  </div>
-  <!--practice code starts-->
-  <div class="container">
     <div class="row">
-      <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0">
->>>>>>> Stashed changes
-
-    </aside>
+      <div class="col-md-7 col-md-push-5 left"></div>
+      <div class="col-md-5 col-md-pull-7 right"></div>
+    </div>
 
   </div>
 </body>
